Got smaller tablet size nav better aligned. Fixed bug with .plug-box in Safari. Cleaned up slideshow code.

--- a/stylesheets/layout/_header.sass
+++ b/stylesheets/layout/_header.sass
@@ -19,6 +19,9 @@
   @media only screen and (max-width: 800px)
     width: 20em
     margin: 0
+  @media only screen and (max-width: 725px)
+    width: 12em
+    margin: 0
   @media only screen and (max-width: 450px)
     width: 13em
     margin: 0
@@ -43,93 +46,12 @@
   top: -0.3em
   right: 0
   display: absolute
-  padding: 1em
+  padding: 1em 0 1em 1em
   z-index: 7
   text-align: right
   @media only screen and (max-width: 800px)
     font-size: 0.8em
-  @media only screen and (max-width: 600px)
-    font-size: 70%
+  @media only screen and (max-width: 725px)
+    font-size: 50%
   @media only screen and (max-width: 450px)
     display: none
-
-#navigation
-  right: 0
-  bottom: 0em
-  display: absolute
-  margin: 2.1em 0 1em 0
-  z-index: 5
-  text-align: right
-  @media only screen and (max-width: 450px)
-    display: none
-  li
-    font-family: $font-family--primary
-    font-weight: bold
-    color: $color-senary
-    text-decoration: none
-    display: inline-block
-    margin: 0 0 0 1.2em
-    text-align: right
-    font-size: 1em
-    @media only screen and (max-width: 800px)
-      font-size: 1em
-    @media only screen and (max-width: 675px)
-      margin-left: 0.4em
-      font-size: 1em
-    &:hover
-      color: $color-tertiary
-    &:hover ul
-      display: block
-    // allows hover to work between parent li and child ul:
-    &:after
-      content: ""
-      position: absolute
-      // must be same as "height" but negative:
-      top: -4.5em
-      left: -1em
-      // must be same as "top" but positive:
-      height: 4.5em
-      width: 100%
-      display: block
-      z-index: 1001
-    ul
-      display: none
-      list-style: none
-      z-index: 20
-      position: fixed
-      background-color: $color-primary
-      // Should be at least .banner's border bottom + #navigation's margin-bottom:
-      margin-top: 1.4em
-      // allows hover to work between parent li and child ul:
-      &:before
-        content: ""
-        position: absolute
-        border-right: 1em solid transparent
-        border-left: 1em solid transparent
-        top: 0
-        left: 42%
-        display: block
-        z-index: 1002
-      li
-        padding: 0.8em 1.2em 0.8em 1em
-        margin-left: -1em
-        float: none
-        display: block
-        color: $color-primary--3
-        background-color: $color-primary
-        font-size: 0.7em
-        line-height: 130%
-        text-align: left
-        a:hover
-          color: $color-tertiary
-        &:hover
-          background-color: $color-primary--1
-        &:first-child
-          padding-top: 1.3em
-        &:last-child
-          padding-bottom: 1.3em
-    a
-      color: $color-senary
-      text-decoration: none
-      &:hover
-        color: $color-tertiary
