--- a/stylesheets/modules/_buttons.sass
+++ b/stylesheets/modules/_buttons.sass
@@ -2,6 +2,7 @@
   @include side-color-box(1em, 0.9em, $color-primary--1, $color-primary--5, 2.6em, 3em, 1em)
   width: 29%
   margin: 0.6em 0 0.6em 67%
+  overflow: visible
   @media only screen and (max-width: 800px)
     width: 100%
     margin-left: 0
